<resources>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="app_name">CryptoBoxForAndroid</string>
    <string name="Create">Создать</string>
    <string name="Open">Открыть</string>
    <string name="Test">Test</string>
    <string name="cryptobox">CryptoBox</string>
    <string name="OpenContainer">Открытие контейнера</string>
    <string name="passwordGenerator">Генератор паролей</string>
    <string name="RSA_Key_Generator">Генератор ключей RSA</string>
    <string name="Symmetric_encryption">Симметричное шифрование</string>
    <string name="Asymmetric_encryption">Ассиметричное шифрование</string>
    <string name="Checksum">Контрольное суммирование</string>
    <string name="Rabin_Cryptosystem">Криптосистема Рабина</string>
    <string name="Vernam_cryptosystem">Криптосистема Вернама</string>
    <string name="RabinCryptoSystem">Криптосистема Рабина</string>
    <string name="ComputeN">Вычислить n</string>
    <string name="Clear">Очистить</string>
    <string name="Encrypt">Зашифровать</string>
    <string name="Decrypt">Расшифровать</string>
    <string name="title_activity_check_sum">Хеширование</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_asymmetric_encryption">AsymmetricEncryptionActivity</string>
    <string name="Information">Информация:</string>
    <string name="setPrivateKey">Установить закрытый ключ…</string>
    <string name="YourText">Ваш текст</string>
    <string name="title_activity_password_generator">Генератор паролей</string>
    <string name="action_settings">Settings</string>
    <string name="Generate">Сгенерировать</string>
    <string name="az">a-z</string>
    <string name="AZ">A-Z</string>
    <string name="_09">0-9</string>
    <string name="spec">Спец символы</string>
    <string name="CountPasswords">Количество паролей:</string>
    <string name="_10">10</string>
    <string name="_8">8</string>
    <string name="PasswordLenght">Длина пароля:</string>
    <string name="pq_Generate">Сгенерировать pq</string>
    <string name="AboutProgram">О программе</string>
    <string name="Tutorial">Справка</string>
    <string name="Version_Program">Версии программы (Обновления) </string>
    <string name="Infor">Информация</string>
    <string name="Test_Info">Тестовая информация</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cancel">Отмена</string>
    <string name="continue_">Продолжить</string>
    <string name="password">Пароль</string>
    <string name="confirmPassword">Подтвердите пароль</string>
    <string name="GenerateKeys">Генерация ключей</string>
    <string name="rsa">Генерация RSA ключей</string>
    <string name="SizeKey">Размер ключа (бит)</string>
    <string name="Generate_rsa">Сгенерировать</string>
    <string name="_1024">1024</string>
    <string name="selectFile">Выбрать файл</string>
    <string name="NoSelectFile">Файл не выбран</string>
    <string name="iv">Вектор инициализации</string>
    <string name="randomIV">Задать случайный вектор инициализации</string>
    <string name="aes_128_cbc_pkcs5padding">Алгоритм: AES/128/CBC/PKCS5Padding</string>
    <string name="n">n:</string>
    <string name="q">q:</string>
    <string name="p">p:</string>
    <string name="test">test</string>
    <string name="addFile">Добавить файл</string>
    <string name="Search">Поиск</string>
    <string name="nameFile">Название файла</string>

</resources>
