<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10pt"
        android:layout_marginTop="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginBottom="10pt"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:text="@string/cryptobox"
                android:textSize="30dp" />


            <Button
                android:id="@+id/buttonTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:visibility="gone"
                android:text="@string/Test" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="5pt"
                android:visibility="invisible" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/Create" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonOpen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/Open" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="5pt"
                android:visibility="invisible" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonGenerator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordGenerator" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonGeneratorRSAKeys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/RSA_Key_Generator" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonSymmetricEncryption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/Symmetric_encryption" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonAssymetricEncryption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Asymmetric_encryption" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonCheckSum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/Checksum" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonRabinCryptoSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Rabin_Cryptosystem" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonVernamCryptoSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/Vernam_cryptosystem" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:visibility="invisible" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonAboutProgram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/AboutProgram" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>