<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordGeneratorActivity">


    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10pt">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/checkbox_AZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AZ"
                android:textSize="9pt" />

            <CheckBox
                android:id="@+id/checkbox_az"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/az"
                android:textSize="9pt" />

            <CheckBox
                android:id="@+id/checkbox_09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_09"
                android:textSize="9pt" />

            <CheckBox
                android:id="@+id/checkbox_spec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spec"
                android:textSize="9pt" />
        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:text="@string/CountPasswords"
                    android:textSize="8pt" />

                <EditText
                    android:id="@+id/editTextPasswordCount"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@string/_10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:text="@string/PasswordLenght"
                    android:textSize="8pt" />

                <EditText
                    android:id="@+id/editTextPasswordLength"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginLeft="10pt"
                    android:text="@string/_8" />
            </LinearLayout>

            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonGeneratePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Generate" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextPasswordGenerator_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:lines="20"
                        android:maxLines="20"
                        android:minLines="20"
                        android:scrollbars="vertical"  />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>