<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RabinCryptoSystemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5pt"
        android:layout_marginTop="5pt"
        android:layout_marginRight="5pt"
        android:layout_marginBottom="5pt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextQ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/n"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:textAllCaps="false"
                    android:id="@+id/buttonRabinCSGenPQ"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/pq_Generate" />

                <Button
                    android:textAllCaps="false"
                    android:id="@+id/buttonComputeN"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/ComputeN" />

            </LinearLayout>
            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Clear" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:textAllCaps="false"
                    android:id="@+id/buttonEncrypt"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/Encrypt" />

                <Button
                    android:textAllCaps="false"
                    android:id="@+id/buttonDecrypt"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/Decrypt" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <EditText
                    android:id="@+id/editTextOut"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:hint="Ваш текст"
                    android:inputType="text|textMultiLine"
                    android:gravity="top"/>
            </ScrollView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>