<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutProgramActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10pt"
        android:layout_marginTop="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginBottom="10pt"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonTutorial"
                android:text="@string/Tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonProgramVersion"
                android:text="@string/Version_Program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/buttonInformation"
                android:text="@string/Test_Info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>